commiting with authorization

--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
