--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "datetime": "^0.0.3",
+    "dotenv": "^16.4.5",
     "flask": "^0.2.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
+    "openai": "^4.52.7",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-pdftotext": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
