--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "datetime": "^0.0.3",
     "dotenv": "^16.4.5",
     "flask": "^0.2.10",
+    "highlight.js": "^11.10.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
     "openai": "^4.52.7",
