--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-pdftotext": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
