--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
     "openai": "^4.52.7",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
