--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-force-graph": "^1.44.4",
