--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dotenv": "^16.4.5",
     "flask": "^0.2.10",
     "highlight.js": "^11.10.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
     "openai": "^4.52.7",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^4.4.168",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
@@ -24,6 +25,7 @@
     "react-feather": "^2.0.10",
     "react-force-graph": "^1.44.4",
     "react-icons": "^5.2.1",
+    "react-pdf": "^9.1.0",
     "react-pdftotext": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
@@ -31,6 +33,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.12.7",
     "serve": "^14.2.3",
+    "tesseract.js": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
