--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.2.1",
     "react-pdf": "^9.1.0",
     "react-pdftotext": "^1.3.0",
+    "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
