--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.12.7",
     "serve": "^14.2.3",
+    "shadcn-ui": "^0.9.3",
     "tesseract.js": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
